--- a/config/GregTech/DynamicConfig.cfg
+++ b/config/GregTech/DynamicConfig.cfg
@@ -3018,6 +3018,7 @@ canning {
     I:item.Bacon_200=200
     I:item.Bagel_200=200
     I:item.BakedApple_300=300
+    I:item.Baklava_500=500
     I:item.Banana_200=200
     I:item.BaseCoockie_100=100
     I:item.BeatenEggs_300=300
@@ -3042,6 +3043,7 @@ canning {
     I:item.CheesePasta_700=700
     I:item.Cheese_200=200
     I:item.CherryJuice_200=200
+    I:item.CherryTomato_100=100
     I:item.Cherry_100=100
     I:item.ChickenDice_100=100
     I:item.ChickenEss_500=500
@@ -3119,6 +3121,7 @@ canning {
     I:item.GluttonyShard_100=100
     I:item.GregTech_MetaGenerated_Item_01.32510_100=100
     I:item.GrilledCheeseSandwich_800=800
+    I:item.GrilledFish_700=700
     I:item.GrilledSausage_500=500
     I:item.Hamburger_600=600
     I:item.HotChocolateFinal_800=800
@@ -3615,6 +3618,7 @@ canning {
     I:item.RawCheeseSandwich_700=700
     I:item.RawChickenNuggets_100=100
     I:item.RawFriedChicken_600=600
+    I:item.RawGrilledFish_600=600
     I:item.RawMeat_100=100
     I:item.RawMeatball_700=700
     I:item.RawMutton_200=200
@@ -3652,6 +3656,7 @@ canning {
     I:item.SugarDonut_200=200
     I:item.Sushi_400=400
     I:item.Sweet_200=200
+    I:item.Syrup_200=200
     I:item.Tea_200=200
     I:item.Toast_200=200
     I:item.TomatoSauce_100=100
@@ -3661,6 +3666,7 @@ canning {
     I:item.TropicalCurry_300=300
     I:item.VanillaIceCream_100=100
     I:item.Waffle_200=200
+    I:item.Walnut_100=100
     I:item.WhippedCream_200=200
     I:item.WitherMuffin_100=100
     I:item.appleGold_200=200
@@ -4404,6 +4410,7 @@ canning {
     I:"tconstruct.items.DiamondApple@30eb7191.32767_200"=200
     I:"tconstruct.items.DiamondApple@311aa179.32767_200"=200
     I:"tconstruct.items.DiamondApple@31493ee3.32767_200"=200
+    I:"tconstruct.items.DiamondApple@3317692e.32767_200"=200
     I:"tconstruct.items.DiamondApple@35318cc9.32767_200"=200
     I:"tconstruct.items.DiamondApple@35d75e49.32767_200"=200
     I:"tconstruct.items.DiamondApple@372dc98.32767_200"=200
@@ -4449,6 +4456,7 @@ canning {
     I:"tconstruct.items.DiamondApple@600de33f.32767_200"=200
     I:"tconstruct.items.DiamondApple@601064f9.32767_200"=200
     I:"tconstruct.items.DiamondApple@60336aa7.32767_200"=200
+    I:"tconstruct.items.DiamondApple@6102d7bd.32767_200"=200
     I:"tconstruct.items.DiamondApple@620fa6b0.32767_200"=200
     I:"tconstruct.items.DiamondApple@62859f0a.32767_200"=200
     I:"tconstruct.items.DiamondApple@64449288.32767_200"=200
@@ -5457,6 +5465,7 @@ compression {
     B:"tile.PamHarvestCraft:vanillabeanSapling_true"=true
     B:"tile.PamHarvestCraft:walnutSapling_true"=true
     B:"tile.PamHarvestCraft:whitemushroomcrop_2_true"=true
+    B:tile.StrawberryBush_true=true
     B:"tile.arsmagica2:blue_orchid_true"=true
     B:"tile.arsmagica2:tarmaroot.0_true"=true
     B:"tile.arsmagica2:tarmaroot_true"=true
@@ -11797,6 +11806,10 @@ maceration {
     B:item.clock_true=true
     B:item.compass_true=true
     B:item.copperCrystal_true=true
+    B:item.deshBoots_true=true
+    B:item.deshChestplate_true=true
+    B:item.deshHelmet_true=true
+    B:item.deshLeggings_true=true
     B:item.doorIron_true=true
     B:item.doorWood_true=true
     B:item.dyePowder.brown_true=true
@@ -14867,6 +14880,10 @@ pulverization {
     B:item.clock_true=true
     B:item.compass_true=true
     B:item.copperCrystal_true=true
+    B:item.deshBoots_true=true
+    B:item.deshChestplate_true=true
+    B:item.deshHelmet_true=true
+    B:item.deshLeggings_true=true
     B:item.doorIron_true=true
     B:item.doorWood_true=true
     B:item.dyePowder.brown_true=true
@@ -18054,6 +18071,10 @@ rockcrushing {
     B:item.clock_true=true
     B:item.compass_true=true
     B:item.copperCrystal_true=true
+    B:item.deshBoots_true=true
+    B:item.deshChestplate_true=true
+    B:item.deshHelmet_true=true
+    B:item.deshLeggings_true=true
     B:item.doorIron_true=true
     B:item.dyePowder.brown_true=true
     B:item.flint_true=true
@@ -21537,10 +21558,10 @@ specialunificationtargets {
     }
 
     ####################
-    # """""""""""""""""""""""""""""""""""""""""""""""""redstone arsenal"""""""""""""""""""""""""""""""""""""""""""""""""
+    # "redstone arsenal"
     ####################
 
-    """"""""""""""""""""""""""""""""""""""""""""""""""redstone arsenal"""""""""""""""""""""""""""""""""""""""""""""""""" {
+    ""redstone arsenal"" {
         B:blockCrystalFlux_false=false
         B:blockElectrumFlux_false=false
         B:dustElectrumFlux_false=false
@@ -21966,6 +21987,7 @@ squeezer {
     B:"item.PamHarvestCraft:turnipseedItem_true"=true
     B:"item.PamHarvestCraft:wintersquashseedItem_true"=true
     B:"item.PamHarvestCraft:zucchiniseedItem_true"=true
+    B:item.Peanut_true=true
     B:item.Rice_true=true
     B:item.SeedsBlackberry_true=true
     B:item.SeedsBlueberry_true=true
