--- a/config/GregTech/Unification.cfg
+++ b/config/GregTech/Unification.cfg
@@ -4329,6 +4329,27 @@ specialunificationtargets {
         B:ingotUranium_false=false
     }
 
+    ####################
+    # galacticraftcore
+    ####################
+
+    galacticraftcore {
+        B:ingotAluminium_false=false
+        B:ingotCopper_false=false
+        B:ingotMeteoricIron_false=false
+        B:ingotTin_false=false
+        B:plateMeteoricIron_false=false
+    }
+
+    ####################
+    # galacticraftmars
+    ####################
+
+    galacticraftmars {
+        B:ingotDesh_false=false
+        B:plateDesh_false=false
+    }
+
 }
 
 
