--- a/config/ThaumcraftMobAspects/micdoodle8.cfg
+++ b/config/ThaumcraftMobAspects/micdoodle8.cfg
@@ -99,6 +99,13 @@
   },
   {
     "_HEADER": "*****************************************",
+    "entityName": "GCFlag",
+    "_FOOTER": "*****************************************",
+    "_COMMENT": "Aspects are in the form aspect : value ",
+    "aspects": {}
+  },
+  {
+    "_HEADER": "*****************************************",
     "entityName": "EvolvedSkeleton",
     "_FOOTER": "*****************************************",
     "_COMMENT": "Aspects are in the form aspect : value ",
