--- a/config/cofh/ThermalExpansion.cfg
+++ b/config/cofh/ThermalExpansion.cfg
@@ -278,7 +278,7 @@ tweak {
         B:Pulverizer.BlizzRod=true
         B:Pulverizer.Bone=true
         I:Pulverizer.Cinnabar.Chance=25
-        B:Pulverizer.Cloth=false
+        B:Pulverizer.Cloth=true
         B:Pulverizer.Netherrack=true
         B:Pulverizer.Reed=true
         B:Pulverizer.Sandstone=true
@@ -308,10 +308,10 @@ tweak {
         B:PneumaticServo.AllowBronze=false
         B:PneumaticServo.AllowInvar=false
         B:PneumaticServo.AllowSilver=false
-        B:PneumaticServo.AllowSteel=true
+        B:PneumaticServo.AllowSteel=false
         B:Pulverizer.AddDiamonds=false
         B:Smelter.AddDiamonds=false
-        B:UseGears=true
+        B:UseGears=false
     }
 
 }
