--- a/config/minetweaker/main.cfg
+++ b/config/minetweaker/main.cfg
@@ -13,16 +13,16 @@ minetweaker.setAdmins("x_Fame");
 
 
 # Rotary Macerator
-recipes.remove(tile.advmachine.macerator);
+recipes.removeShaped(tile.advmachine.macerator);
 
 # Singularit Compressor
-recipes.remove(tile.advmachine.compressor);
+recipes.removeShaped(tile.advmachine.compressor);
 
 # Centrifuge Extractor
-recipes.remove(tile.advmachine.extractor);
+recipes.removeShaped(tile.advmachine.extractor);
 
 # Compact Recycler
-recipes.remove(tile.advmachine.recycler);
+recipes.removeShaped(tile.advmachine.recycler);
 
 # EnderQuarry
 recipes.removeShaped(tile."extrautils:enderQuarry");
@@ -31,28 +31,28 @@ recipes.removeShaped(tile."extrautils:enderQuarry");
 recipes.remove(tile.pumpBlock);
 
 # ReactorCasing
-recipes.remove(tile.blockReactorPart."0");
+recipes.removeShaped(tile.blockReactorPart."0");
 
 # ReactorController
-recipes.remove(tile.blockReactorPart."1");
+recipes.removeShaped(tile.blockReactorPart."1");
 
 # ReactorControllRod
-recipes.remove(tile.blockReactorControlRod);
+recipes.removeShaped(tile.blockReactorControlRod);
 
 # YelloriumFuelRod
-recipes.remove(tile.yelloriumFuelRod);
+recipes.removeShaped(tile.yelloriumFuelRod);
 
 # TurbineHousing
-recipes.remove(tile.blockTurbinePart."0");
+recipes.removeShaped(tile.blockTurbinePart."0");
 
 # TurbineController
-recipes.remove(tile.blockTurbinePart."1");
+recipes.removeShaped(tile.blockTurbinePart."1");
 
 # TurbineRotorShaft
-recipes.remove(tile.blockTurbineRotorPart."0");
+recipes.removeShaped(tile.blockTurbineRotorPart."0");
 
 # TurbineRotorBlade
-recipes.remove(tile.blockTurbineRotorPart."1");
+recipes.removeShaped(tile.blockTurbineRotorPart."1");
 
 
 # Add Recipes
@@ -62,13 +62,13 @@ recipes.remove(tile.blockTurbineRotorPart."1");
 recipes.addShaped(tile."extrautils:enderQuarry"*1, [[tile.machineBlock, null, null], [null, null, null], [null, null, null]]);
 
 # RotaryMacerator
-recipes.addShaped(tile.advmachine.macerator*1, [[item.railcraft.part.plate, item.railcraft.part.plate, item.railcraft.part.plate], [item.railcraft.part.plate, tile.BlockMetaID_Machine.GT_Macerator, item.railcraft.part.plate], [item.railcraft.part.plate, items.blockAdvMachine, item.railcraft.part.plate]]);
+recipes.addShaped(tile.advmachine.macerator*1, [[item.railcraft.part.plate, item.railcraft.part.plate, item.railcraft.part.plate], [item.railcraft.part.plate, <2271:50>, item.railcraft.part.plate], [item.railcraft.part.plate, <4034:12>, item.railcraft.part.plate]]);
 
 # SingularityCompressor
-recipes.addShaped(tile.advmachine.compressor*1, [[tile.obsidian, tile.obsidian, tile.obsidian], [tile.obsidian, tile.BlockMetaID_Machine.GT_Compressor, tile.obsidian], [tile.obsidian, items.blockAdvMachine, tile.obsidian]]);
+recipes.addShaped(tile.advmachine.compressor*1, [[tile.obsidian, tile.obsidian, tile.obsidian], [tile.obsidian, <2271:52>, tile.obsidian], [tile.obsidian, <4034:12>, tile.obsidian]]);
 
 # CentrifugeExtractor
-recipes.addShaped(tile.advmachine.extractor*1, [[items.ic2.itemCellWaterElectro, items.ic2.itemCellWaterElectro, items.ic2.itemCellWaterElectro], [items.ic2.itemCellWaterElectro, tile.BlockMetaID_Machine.GT_Extractor, items.ic2.itemCellWaterElectro], [items.ic2.itemCellWaterElectro, items.blockAdvMachine, items.ic2.itemCellWaterElectro]]);
+recipes.addShaped(tile.advmachine.extractor*1, [[<30237:10>, <30237:10>, <30237:10>], [<30237:10>, <2271:51>, <30237:10>], [<30237:10>, <4034:12>, <30237:10>]]);
 
 # ReactorCasing
 recipes.addShaped(tile.blockReactorPart."0"*8, [[tile.blockIron, item.ingotGraphite, tile.blockIron], [item.ingotGraphite, item.ingotYellorium, item.ingotGraphite], [tile.blockIron, item.ingotGraphite, tile.blockIron]]);
@@ -83,7 +83,7 @@ recipes.addShaped(tile.blockReactorControlRod*1, [[tile.blockReactorPart."0", it
 recipes.addShaped(tile.yelloriumFuelRod*1, [[tile.blockIron, item.ingotGraphite, tile.blockIron], [item.ingotIron, item.ingotYellorium, item.ingotIron], [tile.blockIron, item.ingotGraphite, tile.blockIron]]);
 
 # TurbineHousing
-recipes.addShaped(tile.blockTurbinePart."0"*4, [[tile.blockIron, tile.brMetal."2", tile.blockIron], [item.netherquartz, tile.brMetal."0", item.netherquartz], [tile.blockIron, tile.brMetal."2", tile.blockIron]]);
+recipes.addShaped(tile.blockTurbinePart."0"*4, [[tile.blockIron, <1763:2>, tile.blockIron], [item.netherquartz, <1763:0>, item.netherquartz], [tile.blockIron, <1763:2>, tile.blockIron]]);
 
 # TurbineController
 recipes.addShaped(tile.blockTurbinePart."1"*1, [[tile.blockTurbinePart."0", null, tile.blockTurbinePart."0"], [item.ingotBlutonium, tile.blockDiamond, item.ingotBlutonium], [tile.blockTurbinePart."0", null, tile.blockTurbinePart."0"]]);
