--- a/config/minetweaker/main.cfg
+++ b/config/minetweaker/main.cfg
@@ -65,7 +65,7 @@ recipes.addShaped(tile."extrautils:enderQuarry"*1, [[tile.machineBlock, null, nu
 recipes.addShaped(tile.advmachine.macerator*1, [[item.railcraft.part.plate, item.railcraft.part.plate, item.railcraft.part.plate], [item.railcraft.part.plate, <2271:50>, item.railcraft.part.plate], [item.railcraft.part.plate, <4034:12>, item.railcraft.part.plate]]);
 
 # SingularityCompressor
-recipes.addShaped(tile.advmachine.compressor*1, [[tile.obsidian, tile.obsidian, tile.obsidian], [tile.obsidian, <2271:52>, tile.obsidian], [tile.obsidian, <4034:12>, tile.obsidian]]);
+recipes.addShaped(tile.advmachine.compressor*1, [[<49>, <49>, <49>], [<49>, <2271:52>, <49>], [<49>, <4034:12>, <49>]]);
 
 # CentrifugeExtractor
 recipes.addShaped(tile.advmachine.extractor*1, [[<30237:10>, <30237:10>, <30237:10>], [<30237:10>, <2271:51>, <30237:10>], [<30237:10>, <4034:12>, <30237:10>]]);
