--- a/config/AppliedEnergistics.cfg
+++ b/config/AppliedEnergistics.cfg
@@ -115,9 +115,9 @@ features {
 ####################
 
 graphics {
-    B:gfxCableAnimation=true
-    I:gfxCableMinTickRate=30
-    B:gfxDrivesHighDef=true
+    B:gfxCableAnimation=false
+    I:gfxCableMinTickRate=22
+    B:gfxDrivesHighDef=false
 }
 
 
