--- a/config/GregTech/GregTech.cfg
+++ b/config/GregTech/GregTech.cfg
@@ -5,7 +5,7 @@
 ####################
 
 compatibility {
-    B:Buildcraft.Energy=false
+    B:Buildcraft.Energy=true
     B:Industrialcraft.Energy=true
     B:UniversalElectricity.Energy=true
 }
