--- a/config/AppliedEnergistics.cfg
+++ b/config/AppliedEnergistics.cfg
@@ -117,7 +117,7 @@ features {
 graphics {
     B:gfxCableAnimation=false
     I:gfxCableMinTickRate=22
-    B:gfxDrivesHighDef=false
+    B:gfxDrivesHighDef=true
 }
 
 
