--- a/config/minetweaker/main.cfg
+++ b/config/minetweaker/main.cfg
@@ -74,10 +74,10 @@ recipes.addShaped(tile.advmachine.extractor*1, [[<30237:10>, <30237:10>, <30237:
 recipes.addShaped(tile.blockReactorPart."0"*8, [[tile.blockIron, item.ingotGraphite, tile.blockIron], [item.ingotGraphite, item.ingotYellorium, item.ingotGraphite], [tile.blockIron, item.ingotGraphite, tile.blockIron]]);
 
 # ReactorController
-recipes.addShaped(tile.blockReactorPart."1"*1, [[tile.blockReactorPart."0", null, tile.blockReactorPart."0"], [item.ingotYellorium, tile.blockDiamond, item.ingotYellorium], [tile.blockReactorPart."0", tile.blockRedstone, tile.blockReactorPart."0"]]);
+recipes.addShaped(tile.blockReactorPart."1"*1, [[tile.blockReactorPart."0", null, tile.blockReactorPart."0"], [item.ingotYellorium, tile.blockDiamond, item.ingotYellorium], [tile.blockReactorPart."0", <152>, tile.blockReactorPart."0"]]);
 
 # ReactorControllRod
-recipes.addShaped(tile.blockReactorControlRod*1, [[tile.blockReactorPart."0", item.ingotGraphite, tile.blockReactorPart."0"], [item.ingotGraphite, tile.blockRedstone, item.ingotGraphite], [tile.blockReactorPart."0", item.ingotYellorium, tile.blockReactorPart."0"]]);
+recipes.addShaped(tile.blockReactorControlRod*1, [[tile.blockReactorPart."0", item.ingotGraphite, tile.blockReactorPart."0"], [item.ingotGraphite, <152>, item.ingotGraphite], [tile.blockReactorPart."0", item.ingotYellorium, tile.blockReactorPart."0"]]);
 
 # YelloriumFuelRod
 recipes.addShaped(tile.yelloriumFuelRod*1, [[tile.blockIron, item.ingotGraphite, tile.blockIron], [item.ingotIron, item.ingotYellorium, item.ingotIron], [tile.blockIron, item.ingotGraphite, tile.blockIron]]);
