--- a/config/ExtraUtilities.cfg
+++ b/config/ExtraUtilities.cfg
@@ -90,7 +90,7 @@ item {
 options {
     I:EnderPumpDimensionExceptions <
      >
-    I:deepDarkDimensionID=-100
+    I:deepDarkDimensionID=100
     B:disableEnderPumpInAllDimensions=false
     B:unstableIngotsExplode=true
 }
