--- a/config/minetweaker/main.cfg
+++ b/config/minetweaker/main.cfg
@@ -27,6 +27,9 @@ recipes.removeShaped(tile.advmachine.recycler);
 # EnderQuarry
 recipes.removeShaped(tile."extrautils:enderQuarry");
 
+# BuildCraft Quarry
+recipes.removeShaped(tile.machineBlock);
+
 # BuildCraft Pump
 recipes.remove(tile.pumpBlock);
 
@@ -59,7 +62,7 @@ recipes.removeShaped(tile.blockTurbineRotorPart."1");
 
 
 # EnderQuarry
-recipes.addShaped(tile."extrautils:enderQuarry"*1, [[tile.machineBlock, null, null], [null, null, null], [null, null, null]]);
+recipes.addShaped(tile."extrautils:enderQuarry"*1, [[<9584:98>, <30190>, <9584:98>], [<9709:31086>, <9584:98>, <9709:31086>], [<9584:102>, <9584:99>, <9584:102>]]);
 
 # RotaryMacerator
 recipes.addShaped(tile.advmachine.macerator*1, [[item.railcraft.part.plate, item.railcraft.part.plate, item.railcraft.part.plate], [item.railcraft.part.plate, <2271:50>, item.railcraft.part.plate], [item.railcraft.part.plate, <4034:12>, item.railcraft.part.plate]]);
