--- a/config/Galacticraft/core.conf
+++ b/config/Galacticraft/core.conf
@@ -104,6 +104,9 @@ general {
     # If set to true, Oxygen Collectors will not consume leaf blocks.
     B:"Disable Oxygen Collector Leaf Decay"=false
 
+    # If set to true on a server, players will be completely unable to create space stations.
+    B:"Disable Space Station creation"=false
+
     # Spaceships will not explode on contact if set to true
     B:"Disable Spaceship Explosion"=false
 
@@ -216,43 +219,43 @@ item {
     I:idArmorSteelChestplate=9891
     I:idArmorSteelHelmet=9890
     I:idArmorSteelLeggings=9892
-    I:idItemAirVent=9862
-    I:idItemBasic=9894
+    I:idItemAirVent=19862
+    I:idItemBasic=19894
     I:idItemBattery=13970
-    I:idItemBuggyMaterial=9884
-    I:idItemBuggyPlacer=9871
-    I:idItemCanister=9861
-    I:idItemCanvas=9875
-    I:idItemFan=9864
-    I:idItemFlagPlacer=9873
-    I:idItemFlagPole=9872
-    I:idItemGravityBow=9865
-    I:idItemHeavyOxygenTank=9858
-    I:idItemHeavyPlate=9867
+    I:idItemBuggyMaterial=19884
+    I:idItemBuggyPlacer=19871
+    I:idItemCanister=19861
+    I:idItemCanvas=19875
+    I:idItemFan=19864
+    I:idItemFlagPlacer=19873
+    I:idItemFlagPole=19872
+    I:idItemGravityBow=19865
+    I:idItemHeavyOxygenTank=19858
+    I:idItemHeavyPlate=19867
     I:idItemInfiniteBattery=13971
-    I:idItemKey=9883
-    I:idItemKnowledgeBook=9881
-    I:idItemLightOxygenTank=9856
-    I:idItemMedOxygenTank=9857
-    I:idItemMeteorChunk=9895
-    I:idItemOilCanister=9878
-    I:idItemOilExtractor=9877
-    I:idItemOxygenConcentrator=9863
-    I:idItemOxygenGear=9874
-    I:idItemParachute=9876
-    I:idItemRocketEngine=9866
-    I:idItemRocketFins=9869
-    I:idItemRocketFuelCanister=9879
-    I:idItemRocketNoseCone=9868
-    I:idItemSchematic=9882
-    I:idItemSensorLens=9870
-    I:idItemSpaceship=9855
-    I:idItemStandardWrench=9896
-    I:idToolSteelAxe=9889
-    I:idToolSteelHoe=9888
-    I:idToolSteelPickaxe=9886
-    I:idToolSteelSpade=9887
-    I:idToolSteelSword=9885
+    I:idItemKey=19883
+    I:idItemKnowledgeBook=19881
+    I:idItemLightOxygenTank=19856
+    I:idItemMedOxygenTank=19857
+    I:idItemMeteorChunk=19895
+    I:idItemOilCanister=19878
+    I:idItemOilExtractor=19877
+    I:idItemOxygenConcentrator=19863
+    I:idItemOxygenGear=19874
+    I:idItemParachute=19876
+    I:idItemRocketEngine=19866
+    I:idItemRocketFins=19869
+    I:idItemRocketFuelCanister=19879
+    I:idItemRocketNoseCone=19868
+    I:idItemSchematic=19882
+    I:idItemSensorLens=19870
+    I:idItemSpaceship=19855
+    I:idItemStandardWrench=19896
+    I:idToolSteelAxe=19889
+    I:idToolSteelHoe=19888
+    I:idToolSteelPickaxe=19886
+    I:idToolSteelSpade=19887
+    I:idToolSteelSword=19885
 }
 
 
