--- a/config/ChickenChunks.cfg
+++ b/config/ChickenChunks.cfg
@@ -6,7 +6,7 @@
 players
 {
 	#Forge gives everyone 12500 by default
-	DEFAULT=5000
+	DEFAULT=49
 	#For server op's only.
 	OP=5000
 }
@@ -14,7 +14,7 @@ players
 #If set to false, players will have to be logged in for their chunkloaders to work.:Simply add <username>=<true|false>
 allowoffline
 {
-	DEFAULT=false
+	DEFAULT=true
 	OP=true
 }
 
@@ -33,10 +33,10 @@ block.id=243
 checkUpdates=false
 
 #The number of ticks to wait between attempting to unload orphaned chunks
-cleanuptime=2400
+cleanuptime=4800
 
 #The maximum number of chunks per chunkloader
-maxchunks=80
+maxchunks=48
 
 #Enabling this lets OPs alter other player's chunkloaders. WARNING: If you change a chunkloader, you have no idea what may break/explode by not being chunkloaded.
 op-interact=true
