--- a/config/minetweaker/main.cfg
+++ b/config/minetweaker/main.cfg
@@ -57,6 +57,24 @@ recipes.removeShaped(tile.blockTurbineRotorPart."0");
 # TurbineRotorBlade
 recipes.removeShaped(tile.blockTurbineRotorPart."1");
 
+# Carriage Engine
+recipes.remove(<1124:0>);
+
+# Carriage Motor
+recipes.remove(<1124:1>);
+
+# Carriage Controller
+recipes.remove(<1124:2>);
+
+# Carriage Translocator
+recipes.remove(<1124:3>);
+
+# Carriage Panel
+recipes.remove(<11492:1>);
+
+# Screwdriver
+recipes.remove(<11491:0>);
+
 
 # Add Recipes
 
@@ -96,3 +114,21 @@ recipes.addShaped(tile.blockTurbineRotorPart."0"*1, [[tile.blockIron, item.ingot
 
 # TurbineRotorBlade
 recipes.addShaped(tile.blockTurbineRotorPart."1"*1, [[item.ingotCyanite, tile.blockIron, tile.blockIron], [null, null, null], [null, null, null]]);
+
+# Carriage Engine
+recipes.addShaped(<1124:0>*1, [[<2271:1754>, <9584:99>, <2271:1754>], [<9584:99>, <1124:1>, <9584:99>], [<2271:1754>, <9584:99> ,<2271:1754>]]);
+
+# Carriage Motor
+recipes.addShaped(<1124:1>*1, [[<9584:2>, <9584:1>, <9584:2>], [<9584:1>, <2268:1>, <9584:1>], [<9584:2>, <9584:1>,<9584:2>]]);
+
+# Carriage Controller
+recipes.addShaped(<1124:2>*1, [[<9584:4>, <9584:99>, <9584:4>], [<9584:99>, <1124:1>, <9584:99>], [<9584:0>, <9584:99> ,<9584:0>]]);
+
+# Carriage Translocator
+recipes.addShaped(<1124:3>*1, [[<30184:9>, <4035:0>, <30184:9>], [<4035:0>, <1124:0>, <4035:0>], [<4033:2>, <9584:100> ,<4033:2>]]);
+
+# Carriage Panel
+recipes.addShaped(<11492:1>*1, [[<9630:110>, <9630:110>, <9630:110>], [<9630:110>, <11492:0>, <9630:110>], [<9630:110>, <9630:110>, <9630:110>]]);
+
+# Screwdriver
+recipes.addShaped(<11491:0>*1, [[null, <7802:1>, null], [null, <7802:1>, null], [<334>, <9630:110>, <334>]]);
