--- a/config/minetweaker/main.cfg
+++ b/config/minetweaker/main.cfg
@@ -75,6 +75,9 @@ recipes.remove(<11492:1>);
 # Screwdriver
 recipes.remove(<11491:0>);
 
+# CrossPiece
+recipes.remove(<11492:0>);
+
 
 # Add Recipes
 
@@ -132,3 +135,6 @@ recipes.addShaped(<11492:1>*1, [[<9630:110>, <9630:110>, <9630:110>], [<9630:110
 
 # Screwdriver
 recipes.addShaped(<11491:0>*1, [[null, <7802:1>, null], [null, <7802:1>, null], [<334>, <9630:110>, <334>]]);
+
+# CrossPiece
+recipes.addShaped(<11492:0>*1, [[<9630:96>, null, <9630:96>], [null, <9630:96>, null], [<9630:96>, null,<9630:96>]]);
