--- a/config/minetweaker/main.cfg
+++ b/config/minetweaker/main.cfg
@@ -78,6 +78,41 @@ recipes.remove(<11491:0>);
 # Carriage CrossPiece
 recipes.remove(<11492:0>);
 
+# HSLA Steel Plate
+recipes.remove(<9708:17322>);
+
+# HSLA Steel Ingot
+recipes.remove(<9708:11322>);
+
+# HSLA Rod
+recipes.remove(<9708:23322>);
+
+# HSLA Steel Round
+recipes.remove(<9708:9322>);
+
+# HSLA Steel Bolt
+recipes.remove(<9708:26322>);
+
+# HSLA Steel Screw
+recipes.remove(<9708:27322>);
+
+# HSLA Steel Ring
+recipes.remove(<9708:28322>);
+
+# HSLA Steel Gear
+recipes.remove(<9709:31322>);
+
+# HSLA Steel Nugget
+recipes.remove(<9708:9322>);
+
+# HSLA Steel Dust
+recipes.remove(<9708:2322>);
+
+# HSLA Steel Dust Small
+recipes.remove(<9708:1322>);
+
+# HSLA Steel Dust Tiny
+recipes.remove(<9708:322>);
 
 # Add Recipes
 
