--- a/config/ComputerCraft.cfg
+++ b/config/ComputerCraft.cfg
@@ -46,7 +46,7 @@ general {
     B:http_enable=true
 
     # A semicolon limited list of wildcards for domains that can be accessed through the "http" API on Computers. Set this to "*" to access to the entire internet.
-    S:http_whitelist=*pastebin.com;*computercraft.info
+    S:http_whitelist=*pastebin.com;*computercraft.info;*dropbox.com
 
     # The range of Wireless Modems at maximum altitude in clear weather, in meters
     I:modem_highAltitudeRange=384
