--- a/config/ThaumcraftMobAspects/RotaryCraft.cfg
+++ b/config/ThaumcraftMobAspects/RotaryCraft.cfg
@@ -50,6 +50,13 @@
   },
   {
     "_HEADER": "*****************************************",
+    "entityName": "Flak Shot",
+    "_FOOTER": "*****************************************",
+    "_COMMENT": "Aspects are in the form aspect : value ",
+    "aspects": {}
+  },
+  {
+    "_HEADER": "*****************************************",
     "entityName": "Gas Minecart",
     "_FOOTER": "*****************************************",
     "_COMMENT": "Aspects are in the form aspect : value ",
