--- a/config/Waila.cfg
+++ b/config/Waila.cfg
@@ -41,6 +41,10 @@ modules {
     B:bcapi.storage=true
     B:bcapi.trigger=true
     B:carpenters.hide=true
+    B:enderio.channel=true
+    B:enderio.inout=true
+    B:enderio.owner=true
+    B:enderio.storage=true
     B:enderstorage.colors=true
     B:extrautilities.fluidamount=true
     B:general.showcrop=true
@@ -95,6 +99,10 @@ server_forcing {
     B:bcapi.storage=false
     B:bcapi.trigger=false
     B:carpenters.hide=false
+    B:enderio.channel=false
+    B:enderio.inout=false
+    B:enderio.owner=false
+    B:enderio.storage=false
     B:enderstorage.colors=false
     B:extrautilities.fluidamount=false
     B:general.showcrop=false
