--- a/config/GregTech/Unification.cfg
+++ b/config/GregTech/Unification.cfg
@@ -3544,24 +3544,69 @@ specialunificationtargets {
     ####################
 
     rotarycraft {
+        B:dustAluminium_false=false
+        B:dustAmber_false=false
         B:dustAmmonium_false=false
+        B:dustApatite_false=false
+        B:dustArdite_false=false
         B:dustBauxite_false=false
+        B:dustBlueTopaz_false=false
+        B:dustCadmium_false=false
+        B:dustCalcite_false=false
+        B:dustCertusQuartz_false=false
+        B:dustChimerite_false=false
+        B:dustChromite_false=false
         B:dustCoal_false=false
+        B:dustCobalt_false=false
+        B:dustCopper_false=false
+        B:dustDarkIron_false=false
+        B:dustFirestone_false=false
+        B:dustFluorite_false=false
+        B:dustForce_false=false
         B:dustGalena_false=false
+        B:dustGold_false=false
+        B:dustIndium_false=false
+        B:dustIridium_false=false
+        B:dustIron_false=false
+        B:dustLead_false=false
+        B:dustMagnetite_false=false
+        B:dustMercury_false=false
+        B:dustMimichite_false=false
+        B:dustMonazite_false=false
+        B:dustMoonstone_false=false
         B:dustNetherrack_false=false
+        B:dustNickel_false=false
         B:dustNikolite_false=false
+        B:dustOlivine_false=false
+        B:dustOsmium_false=false
+        B:dustPigIron_false=false
+        B:dustPitchblende_false=false
+        B:dustPlatinum_false=false
         B:dustPyrite_false=false
         B:dustQuantum_false=false
         B:dustRedstone_false=false
+        B:dustRuby_false=false
+        B:dustSalt_false=false
         B:dustSaltpeter_false=false
+        B:dustSapphire_false=false
+        B:dustSilicon_false=false
+        B:dustSilver_false=false
+        B:dustSodalite_false=false
         B:dustSoulSand_false=false
         B:dustSulfur_false=false
+        B:dustSunstone_false=false
+        B:dustTin_false=false
+        B:dustTitanium_false=false
+        B:dustTungsten_false=false
+        B:dustUranium_false=false
         B:dustVinteum_false=false
         B:dustWood_false=false
+        B:dustZinc_false=false
         B:gemAmber_false=false
         B:gemApatite_false=false
         B:gemBlueTopaz_false=false
         B:gemCalcite_false=false
+        B:gemCertusQuartz_false=false
         B:gemChimerite_false=false
         B:gemDiamond_false=false
         B:gemEmerald_false=false
@@ -3571,6 +3616,7 @@ specialunificationtargets {
         B:gemMagnetite_false=false
         B:gemMimichite_false=false
         B:gemMoonstone_false=false
+        B:gemOlivine_false=false
         B:gemRuby_false=false
         B:gemSapphire_false=false
         B:gemSunstone_false=false
@@ -3803,10 +3849,10 @@ specialunificationtargets {
     }
 
     ####################
-    # """""""""""""""""""""""""""""""""""""""""""""""""""redstone arsenal"""""""""""""""""""""""""""""""""""""""""""""""""""
+    # """"redstone arsenal""""
     ####################
 
-    """"""""""""""""""""""""""""""""""""""""""""""""""""redstone arsenal"""""""""""""""""""""""""""""""""""""""""""""""""""" {
+    """""redstone arsenal""""" {
         B:blockCrystalFlux_false=false
         B:blockElectrumFlux_false=false
         B:dustElectrumFlux_false=false
@@ -4313,10 +4359,10 @@ specialunificationtargets {
     }
 
     ####################
-    # """""""""""""""""""""""""""""""""""""""""""""""""""tombenpotter's electro-magic tools"""""""""""""""""""""""""""""""""""""""""""""""""""
+    # """"tombenpotter's electro-magic tools""""
     ####################
 
-    """"""""""""""""""""""""""""""""""""""""""""""""""""tombenpotter's electro-magic tools"""""""""""""""""""""""""""""""""""""""""""""""""""" {
+    """""tombenpotter's electro-magic tools""""" {
         B:plateThaumium_false=false
     }
 
@@ -4383,6 +4429,7 @@ specialunificationtargets {
         B:ingotAluminium_false=false
         B:ingotAlumite_false=false
         B:ingotArdite_false=false
+        B:ingotBlutonium_false=false
         B:ingotBronze_false=false
         B:ingotCobalt_false=false
         B:ingotCopper_false=false
@@ -4393,6 +4440,7 @@ specialunificationtargets {
         B:ingotPlutonium_false=false
         B:ingotSteel_false=false
         B:ingotTin_false=false
+        B:ingotUranium_false=false
         B:ingotYellorium_false=false
         B:nuggetAluminiumBrass_false=false
         B:nuggetAluminium_false=false
