--- a/config/Reika/RotaryCraft.cfg
+++ b/config/Reika/RotaryCraft.cfg
@@ -62,12 +62,16 @@ control {
 ####################
 
 "control setup" {
+    B:"Allow Bedrock Breaker to Break Y=0"=false
     B:"Allow Bedrock Pickaxe to Harvest Spawners"=true
+    B:"Allow Blast Glass to be Used as TE Hardened Glass"=false
     B:"Allow Build Blocking of Some Machines"=false
     B:"Allow Craftable Bedrock"=true
     B:"Allow Gravel Gun PvP"=true
     B:"Allow RC steel to be used in other mods"=true
+    B:"Allow TNT Cannon"=true
     I:"Bait Box Range"=128
+    B:"Block Damage from Destructive Machines"=true
     I:"Block Ram Range"=512
     I:"Breeder Range"=128
     I:"Cave Scanner FOV"=16
@@ -79,14 +83,19 @@ control {
     B:"Crash on hostile interference from other mods"=false
     B:"Debug Mode"=false
     I:"Difficulty Control"=2
+    B:"Direct Block Damage from Machine Failures"=true
     B:"Direct Block Damage from Machines and Failures"=true
+    B:"Disable Silver Iodide Cannon Rain"=false
     I:"EMP Charging Speed"=4
     B:"Enable Achievements"=true
     B:"Engine Running Sounds"=true
     B:"Explode jetpack if player is in lava"=true
+    I:"Fluid Flow Speed"=5
     B:"Force Inter-Mod Ore Compatibility"=true
     B:"GPR Renders Ores"=false
     B:"Instant Woodcutter"=true
+    D:"Iron Ore Density"=1.0
+    B:"Jetpack Uses Jet Fuel"=false
     B:"Lock enchants on bedrock tools"=false
     B:"Log Block Placement and Removal"=false
     D:"Machine Volume Multiplier"=0.5
@@ -114,6 +123,7 @@ control {
     I:"Sprinkler Particle Density"=4
     I:"Sync Packet Interval in Ticks"=1
     B:"Terraformer Block Editing"=true
+    B:"Tools Clear Chat"=true
     B:"Turrets can target players"=true
 }
 
@@ -219,6 +229,7 @@ control {
     I:"BuildCraft Interface"=3713
     I:"D-Type Machines"=3714
     I:"DM-Type Machines"=3715
+    I:"DM-Type Machines 2"=3546
     I:"DMI-Type Machines"=3716
     I:Engines=3717
     I:Flywheels=3718
@@ -239,12 +250,23 @@ control {
 
 
 ####################
+# other ids
+####################
+
+"other ids" {
+    I:"Freeze Potion ID"=100
+    I:"Growth Hormone ID"=101
+}
+
+
+####################
 # resource item ids
 ####################
 
 "resource item ids" {
     I:"Compactor Items"=30633
     I:"Extractor Items"=30632
+    I:"Mod Interface"=30646
     I:"Mod Ore Extractor Items"=30644
     I:"Mod Ore Ingots"=30645
     I:Powders=30635
@@ -258,18 +280,23 @@ control {
 "tool item ids" {
     I:"Angular Transducer"=30501
     I:"Bedrock Axe"=30516
+    I:"Bedrock Grafter"=30561
+    I:"Bedrock Handsaw"=30562
     I:"Bedrock Hoe"=30548
     I:"Bedrock Pickaxe"=30515
+    I:"Bedrock Scythe"=30558
     I:"Bedrock Shears"=30552
     I:"Bedrock Shovel"=30517
     I:"Bedrock Sword"=30550
     I:Bucket=30522
     I:"Cannon Key"=30526
+    I:"Ethanol Minecart"=30528
     I:"Fireball Launcher"=30514
     I:"Gravel Gun"=30513
     I:"HSLA Steel Axe"=30536
     I:"HSLA Steel Hoe"=30549
     I:"HSLA Steel Pickaxe"=30535
+    I:"HSLA Steel Scythe"=30559
     I:"HSLA Steel Shears"=30553
     I:"HSLA Steel Shovel"=30537
     I:"HSLA Steel Sword"=30551
@@ -277,15 +304,19 @@ control {
     I:"Knockback Gun"=30512
     I:"Magic Wand"=30502
     I:"Motion Tracker"=30510
+    I:"Music Box Record"=30555
     I:"Portable Backup Fuel Tank"=30547
     I:"RotaryCraft Handbook"=30504
     I:Screwdriver=30500
+    I:"Spring-Powered Grafter"=30560
     I:"Spring-Powered Pump"=30544
     I:"TNT Cannon Targeting Aid"=30523
     I:"Tile Selector"=30533
     I:Ultrasound=30509
     I:Vacuum=30511
     I:"WorldEdit Tool"=30503
+    I:item.craftpattern=30557
+    I:item.engineupgrade=30556
     I:item.firelauncher=30514
     I:item.flamethrower=30554
     I:item.handpump=30544
