--- a/config/ThaumcraftMobAspects/witchery.cfg
+++ b/config/ThaumcraftMobAspects/witchery.cfg
@@ -22,6 +22,13 @@
   },
   {
     "_HEADER": "*****************************************",
+    "entityName": "witchery.mindrake",
+    "_FOOTER": "*****************************************",
+    "_COMMENT": "Aspects are in the form aspect : value ",
+    "aspects": {}
+  },
+  {
+    "_HEADER": "*****************************************",
     "entityName": "witchery.banshee",
     "_FOOTER": "*****************************************",
     "_COMMENT": "Aspects are in the form aspect : value ",
@@ -43,7 +50,21 @@
   },
   {
     "_HEADER": "*****************************************",
+    "entityName": "witchery.darkmark",
+    "_FOOTER": "*****************************************",
+    "_COMMENT": "Aspects are in the form aspect : value ",
+    "aspects": {}
+  },
+  {
+    "_HEADER": "*****************************************",
     "entityName": "witchery.babayaga",
+    "_FOOTER": "*****************************************",
+    "_COMMENT": "Aspects are in the form aspect : value ",
+    "aspects": {}
+  },
+  {
+    "_HEADER": "*****************************************",
+    "entityName": "witchery.imp",
     "_FOOTER": "*****************************************",
     "_COMMENT": "Aspects are in the form aspect : value ",
     "aspects": {}
@@ -113,6 +134,13 @@
   },
   {
     "_HEADER": "*****************************************",
+    "entityName": "witchery.lordoftorment",
+    "_FOOTER": "*****************************************",
+    "_COMMENT": "Aspects are in the form aspect : value ",
+    "aspects": {}
+  },
+  {
+    "_HEADER": "*****************************************",
     "entityName": "witchery.poltergeist",
     "_FOOTER": "*****************************************",
     "_COMMENT": "Aspects are in the form aspect : value ",
@@ -156,6 +184,13 @@
   {
     "_HEADER": "*****************************************",
     "entityName": "witchery.cat",
+    "_FOOTER": "*****************************************",
+    "_COMMENT": "Aspects are in the form aspect : value ",
+    "aspects": {}
+  },
+  {
+    "_HEADER": "*****************************************",
+    "entityName": "witchery.soulfire",
     "_FOOTER": "*****************************************",
     "_COMMENT": "Aspects are in the form aspect : value ",
     "aspects": {}
