--- a/config/cofh/ThermalExpansion-Fuels.cfg
+++ b/config/cofh/ThermalExpansion-Fuels.cfg
@@ -7,6 +7,7 @@
 coolants {
     I:cryotheum=4000000
     I:ice=2000000
+    I:"liquid nitrogen"=40000
     I:water=400000
 }
 
@@ -47,6 +48,7 @@ fuels {
         I:gascraft_hydrogen=30000
         I:gascraft_naturalgas=30000
         I:oil=150000
+        I:"rc ethanol"=125000
     }
 
     ####################
