--- a/config/witchery.cfg
+++ b/config/witchery.cfg
@@ -16,6 +16,8 @@ block {
     I:ChaliceID=1875
     I:CritterSnareID=1905
     I:CrystalBallID=1906
+    I:DecurseDirectID=1924
+    I:DecurseTeleportID=1923
     I:DemonHeartID=1913
     I:DistilleryBurningID=1864
     I:DistilleryID=1863
@@ -27,6 +29,7 @@ block {
     I:FilteredFumeFunnelID=1895
     I:FluidHollowTearsID=1914
     I:FluidSpiritID=1911
+    I:ForceID=1921
     I:FumeFunnelID=1894
     I:GlintWeedID=1897
     I:GlowGlobeID=1900
@@ -41,11 +44,13 @@ block {
     I:LeechChestID=1901
     I:LogID=1868
     I:MandrakeID=1872
+    I:MindrakeID=1925
     I:OvenBurningID=1862
     I:OvenID=1861
     I:PlacedItemID=1908
     I:PlantMineID=1889
     I:PoppetChestID=1866
+    I:RefillingChestID=1922
     I:SaplingID=1867
     I:ScarecrowID=1917
     I:SnowbellID=1898
@@ -57,6 +62,7 @@ block {
     I:StairsHawthornID=1887
     I:StairsRowanID=1885
     I:StatueGoddessID=1902
+    I:TormentPortalID=1920
     I:TrentID=1918
     I:VoidBrambleID=1896
     I:WickerBundleID=1899
@@ -80,6 +86,7 @@ entity {
     I:CatID=106
     I:CorpseID=111
     I:CovenWitchaID=110
+    I:DarkMarkID=120
     I:DeathID=117
     I:DemonID=92
     I:EntID=100
@@ -90,15 +97,19 @@ entity {
     I:Illusion1ID=101
     I:Illusion2ID=102
     I:Illusion3ID=103
+    I:ImpID=121
     I:LouseID=107
     I:MandrakeID=96
+    I:MindrakeID=124
     I:NightmareID=112
     I:OwlID=104
     I:PoltergeistID=114
+    I:SoulfireID=123
     I:SpectreID=113
     I:SpellEffectID=99
     I:SpiritID=116
     I:ToadID=105
+    I:TormentID=122
     I:TreefydID=97
     I:WitchProjectileID=94
 }
@@ -128,6 +139,10 @@ general {
     I:ApothecaryVillagerID=2435
     I:BranchGlyphSet=0
     I:CovenWitchSpawnWeight=2
+    B:DecurseDirectedEnabled=false
+    I:DecurseDirectedProtectRadius=32
+    B:DecurseTeleportPullEnabled=false
+    I:DecurseTeleportPullProtectRadius=32
     B:DoubleFumeFilterChance=false
     I:DreamDimensionID=10
     B:GUIOnLeft=true
@@ -146,6 +161,7 @@ general {
         Zombie
         Skeleton
      >
+    I:TormentDimensionID=-38
     I:WorldGenFrequency=12
     B:WorldGenInTwilightForest=true
 }
@@ -184,6 +200,7 @@ item {
     I:IceSlippersID=10640
     I:LavaDivinerID=10627
     I:LouseID=10644
+    I:MindrakeSeedsID=10668
     I:MutatorID=10643
     I:MysticBranchID=10642
     I:PolynesiaCharmID=10632
