--- a/config/enderio/EnderIO.cfg
+++ b/config/enderio/EnderIO.cfg
@@ -51,22 +51,22 @@ debug {
 ####################
 
 item {
-    I:"enderIO:itemAlloy"=8531
-    I:"enderIO:itemBasicCapacitor"=31742
-    I:"enderIO:itemConduitFacade"=8526
-    I:"enderIO:itemEnderface"=31743
-    I:"enderIO:itemFusedQuartzFrame"=8532
-    I:"enderIO:itemItemConduit"=8538
-    I:"enderIO:itemLiquidConduit"=8529
-    I:"enderIO:itemMJReader"=31740
-    I:"enderIO:itemMachinePart"=8534
-    I:"enderIO:itemMaterial"=31739
-    I:"enderIO:itemMeConduit"=8539
-    I:"enderIO:itemPowderIngot"=31741
-    I:"enderIO:itemPowerConduit"=8528
-    I:"enderIO:itemRedstoneConduit"=8527
-    I:"enderIO:itemTravelStaff"=8540
-    I:"enderIO:itemYetaWrench"=8533
+    I:"enderIO:itemAlloy"=18531
+    I:"enderIO:itemBasicCapacitor"=11742
+    I:"enderIO:itemConduitFacade"=18526
+    I:"enderIO:itemEnderface"=11743
+    I:"enderIO:itemFusedQuartzFrame"=18532
+    I:"enderIO:itemItemConduit"=18538
+    I:"enderIO:itemLiquidConduit"=18529
+    I:"enderIO:itemMJReader"=11740
+    I:"enderIO:itemMachinePart"=18534
+    I:"enderIO:itemMaterial"=11739
+    I:"enderIO:itemMeConduit"=18539
+    I:"enderIO:itemPowderIngot"=11741
+    I:"enderIO:itemPowerConduit"=18528
+    I:"enderIO:itemRedstoneConduit"=18527
+    I:"enderIO:itemTravelStaff"=18540
+    I:"enderIO:itemYetaWrench"=18533
 }
 
 
@@ -173,7 +173,7 @@ settings {
     B:useAlternateTransceiverModel=false
 
     # When enabled machines cost significantly more.
-    B:useHardRecipes=false
+    B:useHardRecipes=true
 
     # If true, shift-mouse wheel will change the conduit display mode when the YetaWrench is eqipped.
     B:useSneakMouseWheelYetaWrench=true
