--- a/config/Galacticraft/core.conf
+++ b/config/Galacticraft/core.conf
@@ -146,17 +146,11 @@ general {
         21:0
         73:0
         74:0
-        452
-        25131
-        2144:0
      >
 
     # List IDs of non-opaque blocks from other mods (for example, special types of glass) that the Oxygen Sealer should recognize as solid seals. Format is ID:METADATA
     S:"External Sealable IDs" <
         102:0
-        452
-        25131
-        2144:0
      >
 
     # By default, you will respawn on galacticraft dimensions if you die. If you set this to true, you will respawn back on earth.
@@ -166,7 +160,7 @@ general {
     B:"Minimap Bottom"=false
 
     # If true, this will move the Oxygen Indicator to the left side. You can combine this with "Minimap Bottom"
-    B:"Minimap Left"=true
+    B:"Minimap Left"=false
 
     # Setting this to false will revert night skies back to default minecraft star count
     B:"More Stars"=true
