--- a/config/Reika/ReactorCraft.cfg
+++ b/config/Reika/ReactorCraft.cfg
@@ -32,23 +32,14 @@
 
 
 ####################
-# control
-####################
-
-control {
-    I:"Config ID - Edit to have your config auto-deleted"=1
-}
-
-
-####################
 # control setup
 ####################
 
 "control setup" {
     B:"Console Loading Info"=true
     B:"Debug Mode"=false
-    B:"Generate Silver Ore"=false
-    B:"Rainbow Fluorite"=true
+    B:"Generate Silver Ore"=true
+    B:"Rainbow Fluorite"=false
     B:"Retrogen Ores"=false
     B:"Visible Neutrons"=true
 }
@@ -65,6 +56,11 @@ control {
     I:"Depleted Uranium"=18002
     I:"Fluid Canister"=18008
     I:Fluorite=18006
+    I:"Geiger Counter"=18024
+    I:"Hazmat Boots"=18023
+    I:"Hazmat Chest"=18021
+    I:"Hazmat Helmet"=18020
+    I:"Hazmat Legs"=18022
     I:"Heavy Water Bucket"=18004
     I:Ingots=18007
     I:"Nuclear Waste"=18000
@@ -75,16 +71,10 @@ control {
     I:"Radiation Goggles"=18009
     I:"Raw Materials"=18005
     I:"Reactor CPU Remote Control"=18016
+    I:"ReactorCraft Handbook"=18019
     I:"TRISO Fuel Pellet"=18017
     I:"Thorium Fuel Pellet"=18012
     I:"Uranium Fuel Pellet"=18001
-    I:item.cleaner=18014
-    I:item.geiger=18024
-    I:item.hazboots=18023
-    I:item.hazchest=18021
-    I:item.hazhelmet=18020
-    I:item.hazlegs=18022
-    I:item.reactorbook=18019
 }
 
 
@@ -93,7 +83,7 @@ control {
 ####################
 
 other {
-    I:"Radiation Effect ID"=28
+    I:"Radiation Effect ID"=31
 }
 
 
@@ -102,22 +92,24 @@ other {
 ####################
 
 "reactor blocks" {
-    I:Duct=2028
-    I:Fluorite=2030
-    I:"Fluorite Ore"=2031
-    I:Line=2029
-    I:Machine=2032
-    I:MachineModelled=2033
-    I:"Molten Corium"=2034
-    I:"Molten Corium (Flowing)"=2035
-    I:Ore=2036
-    I:Reactor=2037
-    I:"Reactor Materials"=2038
-    I:ReactorModelled=2039
-    I:Steam=2040
-    I:multiblock.heater=2025
-    I:multiblock.injector=2026
-    I:multiblock.solenoid=2027
+    I:Duct=1611
+    I:Fluorite=1608
+    I:"Fluorite Ore"=1609
+    I:Line=1612
+    I:Machine=1605
+    I:MachineModelled=1606
+    I:"Molten Corium"=1603
+    I:"Molten Corium (Flowing)"=1602
+    I:Ore=1607
+    I:Reactor=1600
+    I:"Reactor Materials"=1601
+    I:ReactorModelled=1604
+    I:Steam=1610
+    I:multiblock.generator=1616
+    I:multiblock.heater=1614
+    I:multiblock.injector=1613
+    I:multiblock.solenoid=1615
+    I:multiblock.turbine=1617
 }
 
 
