--- a/config/railcraft/railcraft.cfg
+++ b/config/railcraft/railcraft.cfg
@@ -20,7 +20,7 @@ anchors {
     # 
     # this is the itemID of the item to be used as Anchor Fuel, defaults to Ender Pearls
     # 
-    I:fuel.itemID=368
+    I:fuel.itemID=264
 
     # 
     # this is the itemID of the item to be used as Anchor Fuel, defaults to 0
@@ -30,7 +30,7 @@ anchors {
     # 
     # change to interact.with.pipes=false to prevent pipes, tubes, or various other things from interacting with Anchors
     # 
-    B:interact.with.pipes=true
+    B:interact.with.pipes=false
 
     # 
     # change to personal.craftable=false to disable Personal Anchor crafting, they will still be available via Creative
@@ -42,7 +42,7 @@ anchors {
     # this is an approximation only, actual duration is affected by number of chunks loaded and tick rate
     # set it to -1 to disable the fuel requirement, default = 12, max = 480
     # 
-    I:personal.refuel=12
+    I:personal.refuel=2
 
     # 
     # change to print.locations=true to print Anchor locations to the log on startup
@@ -54,7 +54,7 @@ anchors {
     # this is an approximation only, actual duration is affected by number of chunks loaded and tick rate
     # set it to -1 to disable the fuel requirement, default = 12, max = 480
     # 
-    I:refuel=12
+    I:refuel=2
 }
 
 
@@ -152,7 +152,7 @@ general {
     # 
     # change to 'check.version.online=false' to disable latest version checking
     # 
-    B:check.version.online=true
+    B:check.version.online=false
 
     # 
     # change to 'play.sounds=false' to prevent all mod sounds from playing
