--- a/config/Reika/RotaryCraft.cfg
+++ b/config/Reika/RotaryCraft.cfg
@@ -67,7 +67,7 @@ control {
     B:"Allow Blast Glass to be Used as TE Hardened Glass"=false
     B:"Allow Build Blocking of Some Machines"=false
     B:"Allow Craftable Bedrock"=true
-    B:"Allow Gravel Gun PvP"=true
+    B:"Allow Gravel Gun PvP"=false
     B:"Allow RC steel to be used in other mods"=true
     B:"Allow TNT Cannon"=true
     I:"Bait Box Range"=128
@@ -116,7 +116,7 @@ control {
     B:"Render projector lines"=true
     B:"Rotate Hose/Pipe/Fuel Line Recipes"=false
     B:"Show Force Fields"=true
-    I:"Sonic Borer Range"=512
+    I:"Sonic Borer Range"=256
     B:"Spawn Mobs When Harvesting Spawners By Hand"=false
     B:"Spawn with RC Handbook"=false
     I:"Spawner Mob Limit"=128
