--- a/config/ChickenChunks.cfg
+++ b/config/ChickenChunks.cfg
@@ -6,7 +6,7 @@
 players
 {
 	#Forge gives everyone 12500 by default
-	DEFAULT=58
+	DEFAULT=500
 	#For server op's only.
 	OP=5000
 }
@@ -33,7 +33,7 @@ block.id=243
 checkUpdates=false
 
 #The number of ticks to wait between attempting to unload orphaned chunks
-cleanuptime=86400
+cleanuptime=1728000
 
 #The maximum number of chunks per chunkloader
 maxchunks=48
