--- a/config/ChickenChunks.cfg
+++ b/config/ChickenChunks.cfg
@@ -33,7 +33,7 @@ block.id=243
 checkUpdates=false
 
 #The number of ticks to wait between attempting to unload orphaned chunks
-cleanuptime=1728000
+cleanuptime=86400
 
 #The maximum number of chunks per chunkloader
 maxchunks=48
