--- a/config/minetweaker/main.cfg
+++ b/config/minetweaker/main.cfg
@@ -123,6 +123,13 @@ recipes.remove(<11415>);
 # Anti-Personnel Module
 recipes.remove(<11414>);
 
+# Luggage
+recipes.remove(<15233>);
+
+# EMP Machine Rotarycraft
+recipes.remove(<30872:80>);
+
+
 # Add Recipes
 
 
