--- a/config/railcraft/railcraft.cfg
+++ b/config/railcraft/railcraft.cfg
@@ -8,24 +8,24 @@ anchors {
     # 
     # change to craftable=false to disable World Anchor crafting, they will still be available via Creative
     # 
-    B:craftable=true
+    B:craftable=false
 
     # 
     # change to 'delete.anchors=true' to delete every World Anchor or Anchor Cart in the world.
     # Value resets to false after each session.
     # To disable Anchors completely, disable the ChunkLoading Module from 'modules.cfg'
     # 
-    B:delete.anchors=false
+    B:delete.anchors=true
 
     # 
     # this is the itemID of the item to be used as Anchor Fuel, defaults to Ender Pearls
     # 
-    I:fuel.itemID=264
+    I:fuel.itemID=2268
 
     # 
     # this is the itemID of the item to be used as Anchor Fuel, defaults to 0
     # 
-    I:fuel.itemMeta=0
+    I:fuel.itemMeta=1
 
     # 
     # change to interact.with.pipes=false to prevent pipes, tubes, or various other things from interacting with Anchors
@@ -35,14 +35,14 @@ anchors {
     # 
     # change to personal.craftable=false to disable Personal Anchor crafting, they will still be available via Creative
     # 
-    B:personal.craftable=true
+    B:personal.craftable=false
 
     # 
     # the number of hours that a single Ender Pearl will power a Personal Anchor or Personal Anchor Cart
     # this is an approximation only, actual duration is affected by number of chunks loaded and tick rate
     # set it to -1 to disable the fuel requirement, default = 12, max = 480
     # 
-    I:personal.refuel=2
+    I:personal.refuel=1
 
     # 
     # change to print.locations=true to print Anchor locations to the log on startup
@@ -54,7 +54,7 @@ anchors {
     # this is an approximation only, actual duration is affected by number of chunks loaded and tick rate
     # set it to -1 to disable the fuel requirement, default = 12, max = 480
     # 
-    I:refuel=2
+    I:refuel=1
 }
 
 
