--- a/config/ChickenChunks.cfg
+++ b/config/ChickenChunks.cfg
@@ -6,7 +6,7 @@
 players
 {
 	#Forge gives everyone 12500 by default
-	DEFAULT=2000
+	DEFAULT=51
 	#For server op's only.
 	OP=50000
 }
@@ -14,8 +14,8 @@ players
 #If set to false, players will have to be logged in for their chunkloaders to work.:Simply add <username>=<true|false>
 allowoffline
 {
-	DEFAULT=true
-	OP=true
+	DEFAULT=false
+	OP=false
 }
 
 #Set to false to deny a player access to the chunk viewer
@@ -26,7 +26,7 @@ allowchunkviewer
 }
 
 #The number of minutes since last login within which chunks from a player will remain active, 0 for infinite.
-awayTimeout=0
+awayTimeout=30
 
 block.id=243
 
