--- a/config/StevesCarts.cfg
+++ b/config/StevesCarts.cfg
@@ -37,7 +37,7 @@ enabledmodules {
     B:BridgeBuilder=true
     B:Cage=true
     B:CakeServer=true
-    B:ChunkLoader=true
+    B:ChunkLoader=false
     B:CleaningMachine=true
     B:CoalEngine=true
     B:Colorizer=true
