--- a/config/minetweaker/main.cfg
+++ b/config/minetweaker/main.cfg
@@ -129,6 +129,21 @@ recipes.remove(<15233>);
 # EMP Machine Rotarycraft
 recipes.remove(<30872:80>);
 
+# Carriage Frames 8x Bug Fix
+recipes.remove(<1123:0>);
+
+# Carriage Frames 8x Bug Fix
+recipes.remove(<1123:1>);
+
+# Carriage Frames 8x Bug Fix
+recipes.remove(<1123:2>);
+
+# Carriage Frames 8x Bug Fix
+recipes.remove(<1123:3>);
+
+# Carriage Frames 8x Bug Fix
+recipes.remove(<1123:4>);
+
 
 # Add Recipes
 
@@ -189,3 +204,18 @@ recipes.addShaped(<11491:0>*1, [[null, <7802:1>, null], [null, <7802:1>, null], 
 
 # Carriage CrossPiece
 recipes.addShaped(<11492:0>*1, [[<9630:96>, null, <9630:96>], [null, <9630:96>, null], [<9630:96>, null,<9630:96>]]);
+
+# Carriage Frames 8x Fix
+recipes.addShaped(<1123:0>*8, [[<11492:2>, <11492:2>, <11492:2>], [<11492:2>, <11492:2>, <11492:2>], [<11492:2>, <11492:2>,<351:14>]]);
+
+# Carriage Frames 8x Fix
+recipes.addShaped(<1123:1>*8, [[<11492:2>, <11492:2>, <11492:2>], [<11492:2>, <11492:2>, <11492:2>], [<11492:2>, <11492:2>,<351:4>]]);
+
+# Carriage Frames 8x Fix
+recipes.addShaped(<1123:2>*8, [[<11492:2>, <11492:2>, <11492:2>], [<11492:2>, <11492:2>, <11492:2>], [<11492:2>, <11492:2>,<351:11>]]);
+
+# Carriage Frames 8x Fix
+recipes.addShaped(<1123:3>*8, [[<11492:2>, <11492:2>, <11492:2>], [<11492:2>, <11492:2>, <11492:2>], [<11492:2>, <11492:2>,<351:10>]]);
+
+# Carriage Frames 8x Fix
+recipes.addShaped(<1123:4>*8, [[<11492:2>, <11492:2>, <11492:2>], [<11492:2>, <11492:2>, <11492:2>], [<11492:2>, <11492:2>,<351:5>]]);
