--- a/config/powercrystals/minefactoryreloaded/commonBackup.cfg
+++ b/config/powercrystals/minefactoryreloaded/commonBackup.cfg
@@ -5,8 +5,6 @@
 ####################
 
 block {
-    # This is the base ID blocks will assign from. Delete the other IDs here to auto-align to this value.
-    I:BaseID=3120
     I:ID.BioFuel.Still=3143
     I:ID.Bricks=3133
     I:ID.CargoRailDropoffBlock=3125
@@ -58,7 +56,7 @@ entity {
 
 general {
     # A comma-separated list of entity IDs (e.g.: CaveSpider,VillagerGolem,butterflyGE) to blacklist from the AutoSpawner.
-    S:AutoSpawner.Blacklist=butterflyGE,Luggage,VillagerGolem,201,entity.TwilightForest.TowerGolem.name,CarmaniteGolem,
+    S:AutoSpawner.Blacklist=butterflyGE,Luggage,VillagerGolem
 
     # The work required to generate a mob in exact mode.
     I:AutoSpawner.Cost.Exact=100
@@ -79,10 +77,10 @@ general {
     B:Conveyor.NeverCapturePlayers=false
 
     # If true, conveyors will NEVER capture Thaumcraft golems regardless of other settings.
-    B:Conveyor.NeverCaptureTCGolems=true
+    B:Conveyor.NeverCaptureTCGolems=false
 
     # If true, the fertilizer will use bonemeal as well as MFR fertilizer. Provided for those who want a less work-intensive farm.
-    B:Fertilizer.EnableBonemeal=true
+    B:Fertilizer.EnableBonemeal=false
 
     # The rate at which fish are dropped from the fishing rod. The drop rate is 1 / this number. Must be greater than 0.
     I:FishDropRate=5
@@ -107,6 +105,9 @@ general {
 
     # Set to true to enable the RedNet GUI's colorblind mode.
     B:RedNet.EnableColorblindMode=false
+
+    # If true, roads will be slippery like ice.
+    B:Road.Slippery=true
 
     # When searching for parts of a fruit tree, how far out to the sides (radius) to search
     I:SearchDistance.FruitTreeMaxHoriztonal=5
@@ -175,8 +176,6 @@ general {
 ####################
 
 item {
-    # This is the base ID items will assign from. Delete the other IDs here to auto-align to this value.
-    I:BaseID=11987
     I:ID.BioFuel=12009
     I:ID.BioFuelBucket=12010
     I:ID.BlankRecord=12006
@@ -208,7 +207,6 @@ item {
     I:ID.PinkSlimeBucket=12030
     I:ID.PinkSlimeball=12031
     I:ID.PlasticBag=12049
-    I:ID.PlasticBoots=12050
     I:ID.PlasticCell=12047
     I:ID.PlasticCup=12044
     I:ID.PlasticSheet=11993
@@ -242,10 +240,7 @@ item {
     I:ID.Upgrade.PRC=12021
     I:ID.XPExtractor=12018
 
-    # If true, the ChunkLoader can be built out of cheaper materials. Does nothing if the recipe is disabled.
-    B:Recipe.CheaperChunkLoader=false
-
-    # If true, the DSU can be built out of chests instead of ender pearls. Does nothing if the recipe is disabled.
+    # If true, DSU can be built out of chests instead of ender pearls. Does nothing if the DSU recipe is disabled.
     B:Recipe.CheaperDSU=false
 
     # If true, the Guns will be craftable.
@@ -262,9 +257,6 @@ item {
 
     # DSU recipes will always craft one DSU. Does nothing for recipes that already only craft one DSU (cheap mode, GT recipes, etc).
     B:Recipe.SingleDSU=false
-
-    # If true, smooth double stone slabs can be craftable.
-    B:Recipe.SmoothSlab=true
 
     # If true, the Syringes will be craftable.
     B:Recipe.Syringes=true
@@ -303,13 +295,6 @@ machine {
     B:Breeder.Recipe.Enabled=true
     I:Chronotyper.ActivationCostMJ=128
     B:Chronotyper.Recipe.Enabled=true
-
-    # If true, the Chunk Loader will ignore forgeChunkLoading.cfg.
-    B:ChunkLoader.IgnoreChunkLimit=false
-    B:ChunkLoader.Recipe.Enabled=true
-
-    # If true, the Chunk Loader will require that the player who placed it be online to function
-    B:ChunkLoader.RequiresOwnerOnline=false
     I:Composter.ActivationCostMJ=2
     B:Composter.Recipe.Enabled=true
     B:DeepStorageUnit.Recipe.Enabled=true
@@ -319,8 +304,6 @@ machine {
     B:Fertilizer.Recipe.Enabled=true
     I:Fisher.ActivationCostMJ=2
     B:Fisher.Recipe.Enabled=true
-    I:Fountain.ActivationCostMJ=8
-    B:Fountain.Recipe.Enabled=true
     I:FruitPicker.ActivationCostMJ=32
     B:FruitPicker.Recipe.Enabled=true
     I:Grinder.ActivationCostMJ=320
@@ -339,8 +322,6 @@ machine {
     I:MeatPacker.ActivationCostMJ=2
     B:MeatPacker.Recipe.Enabled=true
     B:MobCounter.Recipe.Enabled=true
-    I:MobRouter.ActivationCostMJ=256
-    B:MobRouter.Recipe.Enabled=true
     I:OilFabricator.ActivationCostMJ=588
     B:OilFabricator.Recipe.Enabled=true
     I:Planter.ActivationCostMJ=16
